--- a/html/Expedition.html
+++ b/html/Expedition.html
@@ -1,3 +1,5 @@
+<div class="row">
+
     <div class="col-lg-4">
       <label>Configuré : </label>
     </div>
@@ -7,3 +9,12 @@
       <input type="radio" name="Configuration" value="No" id="ConfigureNo">
       <label for="ConfigureNo">Non</label>
     </div>
+  </div>
+<div class="row">
+  <div class="col-lg-4">
+    <label>Prix Matériel : </label>
+  </div>
+  <div class="col-lg-8">
+    <input type="text" name="prix" placeholder="XXX €">
+  </div>
+</div>
