--- a/html/Retour.html
+++ b/html/Retour.html
@@ -9,3 +9,11 @@
     <label for="ConnuNo">No</label>
   </div>
 </div>
+<div class="row">
+  <div class="col-lg-4">
+    <label>Numéro de série : </label>
+  </div>
+  <div class="col-lg-8">
+    <input type="text" name="numSerie" placeholder="affichage bdd">
+  </div>
+</div>
