changement palce holder affichage bdd

--- a/html/Expedition.html
+++ b/html/Expedition.html
@@ -15,6 +15,6 @@
     <label>Prix Matériel : </label>
   </div>
   <div class="col-lg-8">
-    <input type="text" name="prix" placeholder="XXX €">
+    <input type="text" name="prix" placeholder=" affichage bdd">
   </div>
 </div>
