--- a/html/communAetBPopup.html
+++ b/html/communAetBPopup.html
@@ -36,6 +36,6 @@
         <label>N° Devis : </label>
       </div>
       <div class="col-lg-8">
-        <input type="text" name="numeroDevis" placeholder="132456879">
+        <input type="text" name="numeroDevis" placeholder="affichage bdd">
       </div>
     </div>
