--- a/html/Retour.html
+++ b/html/Retour.html
@@ -14,6 +14,6 @@
     <label>Numéro de série : </label>
   </div>
   <div class="col-lg-8">
-    <input type="text" name="numSerie" placeholder="affichage bdd">
+    <input type="text" name="numSerie" placeholder="affichage bdd"> <!-- si inconnu dans bdd alors afficher "inconnu"-->
   </div>
 </div>
