--- a/html/index.html
+++ b/html/index.html
@@ -9,18 +9,14 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-
-        <div class="row">
-          <div class="col-sm-4">
-            <input type="submit" name="Send" id="subSend" value="Expedition">
-          </div>
-          <div class="col-sm-4">
-            <input type="submit" name="Receive" id="subReturn" value="Retour">
-          </div>
-          <div class="col-sm-4">
-            <input type="submit" name="SAV" id="subSav" value="SAV">
-          </div>
-        </div>
+        <form action="../php/popupTemplate.php" action="post">
+          <select class="typeCategorie" name="type">
+            <option value="Expédition">Expédition</option>
+            <option value="Retour">Retour</option>
+            <option value="SAV">SAV</option>
+          </select>
+          <input type="submit" name="Send" value="Envoyer">
+        </form>
       </div>
     </div>
   </div>
