--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,11 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <form action="../php/popupTemplate.php" action="post">
+        <form action="../php/popupTemplate.php" method="post">
           <select class="typeCategorie" name="type">
-            <option value="Expédition">Expédition</option>
-            <option value="Retour">Retour</option>
-            <option value="SAV">SAV</option>
+            <option name="Expedition">Expédition</option>
+            <option name="Retour">Retour</option>
+            <option name="SAV">SAV</option>
           </select>
           <input type="submit"  value="Send">
         </form>
