--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,9 @@
       <div class="col-sm-12">
         <form action="../php/popupTemplate.php" method="post">
           <select class="typeCategorie" name="type">
-            <option name="Expedition">Expédition</option>
-            <option name="Retour">Retour</option>
-            <option name="SAV">SAV</option>
+            <option value="Expedition">Expédition</option>
+            <option value="Retour">Retour</option>
+            <option value="SAV">SAV</option>
           </select>
           <input type="submit"  value="Send">
         </form>
