--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,17 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <form action="../php/popupTemplate.php" method="post">
+        <form  method="post">
           <select class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
           </select>
-          <input type="submit"  value="Send">
+          <input type="submit" name="Send" value="Send">
         </form>
       </div>
     </div>
   </div>
 </body>
 </html>
+<!--action="../php/popupTemplate.php"-->
