--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
           </select>
-          <input type="submit" name="Send" value="Send">
+          <input type="submit" id="SubSend" value="Send">
         </form>
       </div>
     </div>
