--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-sm-12">
         <form  method="post">
-          <select action="index.html" class="typeCategorie" name="type">
+          <select action="../php/popupTemplate.php" target="Popup" class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
@@ -22,4 +22,3 @@
   </div>
 </body>
 </html>
-<!--action="../php/popupTemplate.php"-->
