--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <form  method="post">
-          <select action="../php/popupTemplate.php" target="Popup" class="typeCategorie" name="type">
+        <form action="../php/popupTemplate.php" target="Popup" method="post">
+          <select  class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
