--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <form action="../php/popupTemplate.php" target="Popup" method="post" onsubmit="openPopup()">
+        <form action="../php/popupTemplate.php" target="_blank" method="post" onsubmit="openPopup()">
           <select  class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
