--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <form action="../php/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'popup', 'width=200,height=700,scollbars=1,resizable=0');">
+        <form action="../php/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('', 'popup', 'width=200,height=700,scollbars=1,resizable=0');">
           <select  class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
