action="../template/popupTemplate.php"

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../js/popupS.js" charset="utf-8"></script>
+  <script src="../src/script.js" charset="utf-8"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-<form action="../php/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=200,height=300,resizable=false,scrollbars=1');">
+<form action="../template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=200,height=300,resizable=false,scrollbars=1');">
           <select  class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
