--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-<form action="../template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=200,height=300,resizable=false,scrollbars=1');">
+<form action="./template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=200,height=300,resizable=false,scrollbars=1');">
           <select  class="typeCategorie" name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
