--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <script src="../src/script.js" charset="utf-8"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-sm-12">
-<form action="./template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=620,height=650');">
-          <select  class="typeCategorie" name="type">
+      <div class="col-sm-3 col-sm-offset-5">
+<form action="./template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=620,height=800');">
+          <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
