--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script src="../src/script.js" charset="utf-8"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-sm-offset-5">
-<form action="./template/popupTemplate.php" target="Popup" method="post" onsubmit="window.open('about:blank', 'Popup', 'width=620,height=800');">
+<form action="./test_Modal.php" target="Popup" method="post" >
           <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
