popupTempalte_Modal in template folder ./template/poupTemplate_Modal.php

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-sm-offset-5">
-<form action="./test_Modal.php" target="Popup" method="post" >
+<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >
           <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
