--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html>
 <head>
   <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./src/style.css" />
+  <link rel="stylesheet" href="./src/libs/bootstrap/bootstrap_lib.css">
+  <link href="./src/libs/jquery/jquery_ui.css" rel="stylesheet" type="text/css" />
+  <script src="./src/libs/jquery/jquery_lib.js"></script>
+  <script src="./src/libs/jquery/jquery_ui.js"></script>
+  <script src="./src/libs/bootstrap/bootstrap_lib.js"></script>
+   <script src="./test_folder/testAjax/script_compt_IE_index.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-sm-offset-5">
-<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >
+<!--<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >-->
+<form class="form-horizontal ajax" action="" >
           <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
           </select>
-          <input type="submit" id="SubSend" value="Send">
+      <!--    <input type="submit" id="SubSend" value="Send">-->
+      <input class="btn-primary" type="submit" name="btnSend" value="Ok">
         </form>
       </div>
     </div>
