add index.html in testAjax folder

--- a/test_folder/testAjax/index.html
+++ b/test_folder/testAjax/index.html
@@ -16,14 +16,15 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-sm-offset-5">
-<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >
+<!--<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >-->
+<form class="form-horizontal ajax" action="" >
           <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
             <option value="SAV">SAV</option>
           </select>
-        <input type="submit" id="SubSend" value="Send">
-
+      <!--    <input type="submit" id="SubSend" value="Send">-->
+      <input class="btn-primary" type="submit" name="btnSend" value="Ok">
         </form>
       </div>
     </div>
