--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3 col-sm-offset-5">
-<form action="./template/popupTemplate_Modal.php" target="Popup" method="post" >
+<form action=''  onsubmit="window.open('./template/popupTemplate_Modal.php?type=SAV', '_blank', 'scrollbars=no,menubar=no,height=600,width=800,resizable=yes,toolbar=no,status=no');" method="post" >
           <select  class="typeCategorie " name="type">
             <option value="Expedition">Expédition</option>
             <option value="Retour">Retour</option>
